<resources>
    <string name="app_name">PopularMovies</string>
    <string name="action_settings">Settings</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="title">Title</string>
    <string name="overview">Overview:</string>
    <string name="homepage">Homepage:</string>
    <string name="release_date">Release Date:</string>
    <string name="genres">Genres:</string>
    <string name="budget">Budget:</string>
    <string name="language">Language:</string>
    <string name="revenue">Revenue:</string>
    <string name="length">Length:</string>
    <string name="votes">%d Votes</string>
    <string name="bg">BG</string>
    <string name="rating">Rating</string>
    <string name="popular">Popular</string>
    <string name="highest_rated">Highest Rated</string>
</resources>
