<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.bcalabri.popularmovies.MovieDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backdrop"
            android:alpha="0.5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bg"
            android:scaleType="centerCrop" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/movie_detail">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:fadeScrollbars="true">

                <TextView
                    android:id="@+id/value_title"
                    android:contentDescription="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="normal|bold"
                    tools:text="Rogue one: a star wars story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:paddingBottom="5dp"
                    android:textSize="40sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif" />

                <ImageView
                    android:id="@+id/value_poster_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cropToPadding="true"
                    android:adjustViewBounds="true"
                    android:paddingBottom="5dp" />

                <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    app:columnCount="2"
                    app:rowOrderPreserved="true"
                    app:useDefaultMargins="true">

                    <TextView
                        android:id="@+id/title_rating"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        android:text="@string/rating" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        >

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:clickable="false"
                            android:numStars="10"
                            android:rating="9.5"
                            android:stepSize=".1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/value_numRatings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/ratingBar"
                            android:layout_toRightOf="@id/ratingBar"
                            android:paddingLeft="3dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="18sp"
                            tools:text="2 Votes" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/title_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="Overview" />

                    <TextView
                        android:id="@+id/value_overview"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="Lol"
                        android:layout_width="match_parent" />

                    <TextView
                        android:id="@+id/title_homepage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/homepage"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="Homepage:" />

                    <TextView
                        android:id="@+id/value_homepage"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="Link" />

                    <TextView
                        android:id="@+id/title_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="Release Date:" />

                    <TextView
                        android:id="@+id/value_release"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="Test" />

                    <TextView
                        android:id="@+id/title_genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genres"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="Genres:" />

                    <TextView
                        android:id="@+id/value_genres"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="Test" />

                    <TextView
                        android:id="@+id/title_budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/value_budget"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="Test" />

                    <TextView
                        android:id="@+id/title_languages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/value_language"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="EN" />

                    <TextView
                        android:id="@+id/title_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/value_length"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="length" />

                    <TextView
                        android:id="@+id/title_revenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/revenue"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/value_revenue"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        tools:text="Test" />

                </android.support.v7.widget.GridLayout>

            </LinearLayout>
        </ScrollView>

    </FrameLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movie_progress_bar"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp" />

</RelativeLayout>
